# Interview-compass

./: .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/backend/data/: cache.json  prompt.json
backend/src/: cache_store.py  ffmpeg_pipeline.py  gemini_client.py  main.py  model_store.py  models.py  prompt_store.py  settings.py
frontend/: index.html  mock.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/features/: AnalysisPanel.tsx  Sidebar.tsx  Stage.tsx
frontend/src/components/layout/: Shell.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx
